[project]
name = "mgo-healthchecker"
version = "0.1.0"
description = "Small shared health check utilities for FastAPI applications"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.125,<0.130"
]

[project.optional-dependencies]
redis = ["redis>=5.3.1,<6"]
sqlalchemy = ["sqlalchemy>=2.0.45,<3"]

[dependency-groups]
dev = [
    "faker>=40.8.0",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pre-commit-uv>=4.2.1",
    "pytest",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.5",
]

[build-system]
requires = ["uv_build >= 0.10.7, <0.11.0"]
build-backend = "uv_build"

[tool.ruff]
cache-dir = "~/.cache/ruff"
include = [
    "pyproject.toml",
    "src/mgo_healthchecker/*.py",
    "tests/*.py",
]

[tool.ruff.lint]
select = ["TID251", "TID252", "F401"]

[tool.mypy]
files = "src/mgo_healthchecker,tests"
python_version = "3.11"
strict = true
cache_dir = "~/.cache/mypy"

[tool.pytest.ini_options]
cache_dir = "~/.cache/pytest"
testpaths = [
    "tests",
]
